fix: fix line wrapping for hot takes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2217,7 +2217,6 @@ textarea.form-input::-webkit-resizer { display: none; }
   cursor: pointer;
   text-transform: uppercase;
   width: 100%;
-  max-width: 140px;
   text-align: center;
   transition: background 0.3s, color 0.3s;
 }
